test/FAIL/loadcmd/invalid_name/05_test_load.emu
#-------
#TEST_RETURN_CODE=FAIL           
#TEST_COMMENT="wrong arguments("nom"=nom_fichier)"
#-------

load -54



